# ballsOnTheScreen

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: balls.cpp.91822CA19A96E01E.idx  balls.h.42ADDD049CF320F4.idx  blocks.cpp.665637AF31EA15D8.idx  blocks.h.F07840D81A2B276C.idx  gui.cpp.E18FB3D725802FEC.idx  gui.h.CBF0F9A91160AE4B.idx  main.cpp.AF89C0B1B4AE444A.idx
include/: balls.h  blocks.h  gui.h
src/: balls.cpp  blocks.cpp  gui.cpp  main.cpp
